--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -8,6 +8,8 @@ jobs:
   create_issue:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out the code
+        uses: actions/checkout@v2
       - name: Create Issue
         id: create_issue
         run: |
